Update LaTeX and geom_atoms

--- a/name3.tex
+++ b/name3.tex
@@ -5382,6 +5382,17 @@ $F_{\text{geom}}$, $E_{\text{port}}$ и портовая геометрия.
         спектрального ``химического потенциала''
         $\mu_{\text{env}}^{\text{spec}}$.
 \end{itemize}
+Численные значения $\chi_{\text{spec}}(Z)$ калибруются по табличной
+шкале Полинга: в коде для элементов H--Cl подбираются параметры
+глобального масштаба $\alpha$, демпфирования доноров
+$\gamma_{\text{donor}}$ и слабого фонового вклада хабов
+$k_{\text{center}}$ так, чтобы сумма квадратов разностей
+$\bigl(\chi_{\text{spec}}(Z) - \chi_{\text{Pauling}}(Z)\bigr)^2$
+была минимальной. Для версии v1.0 получаются значения порядка
+$\alpha \approx 1.24$, $\gamma_{\text{donor}} \approx 3.0$,
+$k_{\text{center}} \approx 0.1$, что заметно снижает численное
+расхождение с Полингом, не ломая при этом исходное разделение ролей
+на доноров, акцепторов, структурные центры и инертные элементы.
 
 Для удобства все эти величины сведены в явную табличку
 \texttt{Spectral periodic table}, которую печатает функция
