Add F_flow energy functional and harmonic limit section

--- a/name3.tex
+++ b/name3.tex
@@ -5482,4 +5482,46 @@ $(\varepsilon_{\text{spec}}, F_{\text{spec}}, E_{\text{port}},
 спектральных инвариантов, которые повторяются на новых
 масштабах $Z$.
 
+%-------------------------------------------
+\section{Черновики: Гармонический предел и энергия молекулы}
+\label{sec:harmonic-limit}
+
+\subsection{Спектральный функционал зарядов как гармоническое приближение}
+
+В спектральной картине основным объектом считается не точечный заряд, а распределение плотности среды $\rho_{\text{spec}}(r)$. Полная энергия молекулы в идеале является некоторым (неизвестным нам явно) функционалом $F_{\text{full}}[\rho_{\text{spec}}]$, зависящим от формы солитонов-«атомов» и их взаимного спектрального и топологического расположения.
+
+В практической модели мы работаем не с непрерывной $\rho_{\text{spec}}$, а с интегральными «зарядами» $q_i$ на атомах — отклонениями от нейтрального состояния. Тогда естественным шагом является квадратичное (гармоническое) приближение полного функционала по этим отклонениям:
+\[
+  F_{\text{flow}}(\{q_i\})
+  \approx
+  \sum_i \left( \chi_i^{\text{spec}}\, q_i + \frac{1}{2} \eta_i q_i^2 \right)
+  + \frac{1}{2} \sum_{i \ne j} J_{ij} q_i q_j.
+\]
+Здесь $\chi_i^{\text{spec}}$ мы отождествляем с «спектральной электроотрицательностью» атома (первый производный от энергии по заряду), $\eta_i$ — с локальной «жесткостью» (у нас она связана с портовой энергией $E_{\text{port}}$), а $J_{ij}$ описывает взаимное отталкивание и поляризационную связь между атомами.
+
+Минимизируя $F_{\text{flow}}$ по $\{q_i\}$ при фиксированной сумме зарядов, мы получаем стационарное распределение частичных зарядов и эффективный химический потенциал молекулы. Таким образом, QEq-подобная схема, которую мы используем, — это не отдельная «инородная механика», а гармоническое приближение к более общей спектральной энергетике. В этом смысле $F_{\text{flow}}$ играет роль «акустического предела» более сложной полевой теории.
+
+\subsection{Полный энергофункционал молекулы $F_{\text{mol}}$}
+
+Для ранжирования молекул по стабильности и оценки «цены» образования связей вводится полный молекулярный функционал $F_{\text{mol}}$, объединяющий геометрические, угловые и потоковые вклады:
+\[
+  F_{\text{mol}}
+  = F_{\text{geom}} + F_{\text{angle}} + F_{\text{flow}}.
+\]
+Где:
+\begin{itemize}
+  \item $F_{\text{geom}} = \sum_i F_{\text{geom}}(Z_i)$ — сумма собственных геометрических энергий атомов (сложность графов);
+  \item $F_{\text{angle}}$ — штраф за отклонение валентных углов от идеальных (например, sp3-тетраэдра);
+  \item $F_{\text{flow}}$ — выигрыш (или проигрыш) энергии за счёт перераспределения электронной плотности (выравнивания химических потенциалов).
+\end{itemize}
+
+Примеры расчёта (по данным R\&D-лаборатории):
+\begin{itemize}
+  \item \textbf{H$_2$O}: $F_{\text{total}} \approx 8.0$. Система сильно стабилизирована, $F_{\text{flow}}$ мал, так как связь O--H близка к ковалентной в текущей калибровке.
+  \item \textbf{HF}: $F_{\text{total}} \approx 4.5$. Низкая энергия (высокая стабильность), заметный вклад $F_{\text{flow}}$ из-за большой разности $\chi_{\text{spec}}$.
+  \item \textbf{Si--O--Si}: $F_{\text{total}} \approx 16.8$. Более тяжёлая система, но стабилизированная сильным перетеканием заряда к мостиковому кислороду ($F_{\text{flow}} \approx -1.0$).
+\end{itemize}
+
+Такой подход позволяет в рамках единой модели сравнивать «геометрическую стоимость» атомов и «энергетическую выгоду» их соединения.
+
 \end{document}
