Add energy breakdown, reaction module, limitations section

--- a/name3.tex
+++ b/name3.tex
@@ -5524,4 +5524,34 @@ $(\varepsilon_{\text{spec}}, F_{\text{spec}}, E_{\text{port}},
 
 Такой подход позволяет в рамках единой модели сравнивать «геометрическую стоимость» атомов и «энергетическую выгоду» их соединения.
 
+\subsection{Калиброванные параметры модели}
+
+В текущей версии кода (\texttt{geom\_atoms.py}) используются следующие калиброванные параметры, подобранные по минимизации расхождения с шкалой Полинга:
+\begin{itemize}
+  \item $\alpha \approx 1.237$ — глобальный масштаб спектральной электроотрицательности;
+  \item $\gamma_{\text{donor}} \approx 3.0$ — коэффициент демпфирования доноров;
+  \item $k_{\text{center}} \approx 0.1$ — фоновый вклад структурных центров (хабов);
+  \item $\varepsilon_{\text{neutral}} \approx 0.06$ — порог нейтральности.
+\end{itemize}
+
+\subsection{Ограничения и область применимости}
+
+Модель $F_{\text{mol}} = F_{\text{geom}} + F_{\text{angle}} + F_{\text{flow}}$ является \emph{игрушечной R\&D-лабораторией}, а не полноценным квантово-химическим расчётом. Основные ограничения:
+\begin{enumerate}
+  \item \textbf{Линейное (квадратичное) приближение по $q$}: нелинейные эффекты перераспределения заряда не учитываются.
+  \item \textbf{Топологические расстояния вместо физических $r_{ij}$}: модель работает в пространстве графа связей, а не в 3D-пространстве.
+  \item \textbf{Феноменологические параметры}: коэффициенты \texttt{hardness\_offset}, \texttt{hardness\_scale}, \texttt{interaction\_scale} и т.\,п.\ подбирались вручную и не калиброваны по большой базе данных.
+  \item \textbf{Произвольные абсолютные значения $F_{\text{mol}}$}: физический смысл имеют только относительные сравнения и знаки $\Delta F$ для реакций.
+  \item \textbf{Игрушечные графы атомов}: топология канонических графов $G_Z$ упрощена и не отражает реальную электронную структуру.
+\end{enumerate}
+
+Тем не менее, модель позволяет:
+\begin{itemize}
+  \item ранжировать молекулы по «стоимости»;
+  \item оценивать направление потоков заряда;
+  \item сравнивать энергии реакций $\Delta F = \sum F_{\text{prod}} - \sum F_{\text{react}}$.
+\end{itemize}
+
+Это достаточно для первичной разведки химического пространства в рамках спектральной парадигмы.
+
 \end{document}
