Add RND master report and v3 epsilon-chi coupling

--- a/name3.tex
+++ b/name3.tex
@@ -194,6 +194,102 @@
 противоречит одному из них, оно либо ошибочно, либо относится к разделу
 гипотез и дальнейших исследований.
 
+\subsection{Спектральная лаборатория: что показывает модель v1.0–v2.0}
+
+На этом этапе у нас уже не просто ``калькулятор свойств'', а
+вычислительная спектральная лаборатория. Код \texttt{geom\_atoms.py}
+генерирует полный отчёт (RND MASTER REPORT), по которому можно судить
+о поведении атомов и молекул в спектральной среде. Ниже я кратко
+фиксирую четыре ключевых эффекта, которые устойчиво проявляются
+в версиях модели v1.0 и v2.0.
+
+\paragraph{1. Мир близнецов (версия v1.0).}
+
+В базовой калибровке v1.0 элементы одной группы периодической таблицы
+спектрально неразличимы. Литий и натрий имеют одинаковые порты и
+одинаковую спектральную электроотрицательность, то же самое верно
+для фтора и хлора. Отсюда два следствия:
+
+\begin{itemize}
+  \item обменные реакции типа HF + NaCl \(\to\) HCl + NaF оказываются
+        изоэнергетичными (\(\Delta F \approx 0\));
+  \item органические молекулы вроде H\(_2\)O и H\(_2\)S в спектральном
+        потоке почти не различаются: потоковая энергия \(F_{\text{flow}}\)
+        практический нулевая по сравнению с геометрической.
+\end{itemize}
+
+Эта картина удобна как ``нулевой уровень'': она показывает, как ведёт
+себя чисто геометрическая модель без эффекта периода и без тонкой
+электроники.
+
+\paragraph{2. Периодическое размягчение и асимметрия доноров и акцепторов (v2.0).}
+
+Версия v2.0 вводит явную зависимость энергии порта от периода (размера)
+атома: порты тяжёлых элементов становятся мягче. Это сразу разрывает
+вырождение ``близнецов'': фтор перестаёт быть тождественным хлору,
+литий~--- натрию, а обменные реакции получают ненулевую \(\Delta F\).
+
+Численные эксперименты показывают жёсткую асимметрию:
+
+\begin{itemize}
+  \item доноры (Li, Na) меняются мало: их способность отдавать заряд
+        с ростом периода деградирует плавно;
+  \item акцепторы (F, Cl) деградируют гораздо быстрее: по мере роста
+        размера и мягкости атом всё хуже удерживает ``спектральный вакуум''
+        и перестаёт быть сильным окислителем.
+\end{itemize}
+
+В терминах модели: состояние ``избыточного давления'' (металл, донор)
+геометрически устойчиво, а состояние ``вакуума'' (неметалл, акцептор)
+хрупко и требует жёсткой оболочки. Поэтому сильные окислители
+естественно концентрируются в верхних периодах таблицы, а крупные
+атомы стремятся к металлическому поведению.
+
+\paragraph{3. Принцип мягкой проводимости: H\(_2\)O против H\(_2\)S.}
+
+В v2.0 я ввожу простой индекс спектральной реактивности
+\(R_{\text{react}}\), который сравнивает по модулю потоковую энергию
+\(F_{\text{flow}}\) с суммой геометрических вкладов.
+
+Оказалось, что при одинаковой геометрии:
+
+\begin{itemize}
+  \item у воды H\(_2\)O потоковая часть \(|F_{\text{flow}}|\) мала по сравнению
+        с \(F_{\text{geom}}\) и угловым штрафом;
+  \item у сероводорода H\(_2\)S спектральный поток заметно сильнее,
+        а относительный индекс \(R_{\text{react}}\) выше.
+\end{itemize}
+
+Интуитивно можно сказать так: кислород в модели жёсткий и
+электроотрицательный, он создаёт большой перепад потенциала, но плохо
+пропускает заряд через свою оболочку. Сера мягче: перепад потенциала
+меньше, зато канал шире, и по нему легче текут потоки. В спектральной
+среде важна не только разность потенциалов, но и ``проводимость''
+канала; мягкие элементы третьего периода лучше проводят спектральные
+потоки, чем жёсткие элементы второго.
+
+\paragraph{4. Горизонт химии и отрицательный результат Super-O.}
+
+Отдельный вычислительный эксперимент сканирует показатель размягчения
+\(k\) и ищет значение, при котором спектральная электроотрицательность
+хлора выравнивается с водородом. При малых \(k\) хлор заметно
+электроотрицательнее H, при больших~--- становится слабее его.
+Между этими режимами есть ``горизонт химии'', где \(\chi_{\mathrm{Cl}}
+\approx \chi_{\mathrm{H}}\).
+
+Рабочий выбор \(k\) в v2.0 делается осознанно внутри ``зоны жизни'':
+достаточно далеко от чистого вырождения, чтобы отличать F и Cl
+и получать ненулевые энергии реакций, но и не настолько велик, чтобы
+совсем лишить хлор окислительных свойств. Это не подгонка под справочник,
+а выбор режима, в котором видны именно спектральные эффекты.
+
+Наконец, специальный эксперимент с искусственным ``Super-O'' (попытка
+радикально изменить параметр \(\epsilon\) для кислорода) показал, что
+в текущей реализации v2.0 этот параметр практически не влияет на
+расчёт \(\chi_{\text{spec}}\) и потоков. Это важный отрицательный
+результат: он означает, что спектральная ``глубина ямы'' пока ещё
+не полностью подключена к вычислительной схеме и представляет собой
+естественное направление для следующей версии модели.
 
 \subsection{Антирелятивистский постулат}
 \label{subsec:postulate-anti-rel}
@@ -5553,5 +5649,36 @@ $(\varepsilon_{\text{spec}}, F_{\text{spec}}, E_{\text{port}},
 \end{itemize}
 
 Это достаточно для первичной разведки химического пространства в рамках спектральной парадигмы.
+
+\subsection{Переход к v2.0: спектральное размягчение по периоду}
+
+В режиме v1.0 элементы одной группы (Li/Na, F/Cl) оказываются \emph{спектрально вырожденными клонами}: совпадают $E_{\text{port}}$, $\chi_{\text{spec}}$, и следовательно, обменные реакции изоэнергетичны ($\Delta F = 0$).
+
+Для снятия этого вырождения вводится \textbf{режим v2.0 (period split)}, в котором портовая энергия масштабируется по периоду элемента:
+\[
+  E_{\text{port}}^{\text{(v2)}}(Z)
+  \;=\;
+  E_{\text{port}}^{\text{(geom)}}(Z)
+  \;\cdot\;
+  \text{Period}(Z)^{-k},
+  \quad k \approx 0.7.
+\]
+
+Физическая интерпретация: солитон большего радиуса (тяжёлый период) даёт меньшую локальную плотность энергии на порт --- «мягче связывает». Это \textbf{закон спектрального размягчения}.
+
+Следствия:
+\begin{itemize}
+  \item F (период 2) становится «жёстче» Cl (период 3): $\chi_{\text{spec}}^{\text{F}} > \chi_{\text{spec}}^{\text{Cl}}$.
+  \item Li (период 2) чуть «сильнее донор», чем Na (период 3).
+  \item Обменные реакции ($\text{HF} + \text{NaCl} \leftrightarrow \text{HCl} + \text{NaF}$) теперь имеют ненулевую $\Delta F$, что позволяет предсказывать направление реакции.
+\end{itemize}
+
+В коде это реализовано переключателем:
+\begin{verbatim}
+SPECTRAL_MODE = "v1"  # или "v2_period_split"
+V2_PERIOD_EXPONENT = 0.7
+\end{verbatim}
+
+Параметр $k$ подбирается по критерию согласия знака $\Delta F$ с известной химией обменных реакций галогенидов щелочных металлов.
 
 \end{document}
