Add v3.0 spectral regime subsection

--- a/name3.tex
+++ b/name3.tex
@@ -291,6 +291,80 @@
 не полностью подключена к вычислительной схеме и представляет собой
 естественное направление для следующей версии модели.
 
+\subsection{Спектральный режим v3.0: связь глубины $\varepsilon$ и электроотрицательности}
+
+Версии v1.0 и v2.0 строят ``скелет'' спектральной химии: геометрическую жёсткость атомов, их роли (terminator, bridge, hub, inert) и периодическое размягчение (зависимость жёсткости от номера периода). Однако до включения режима v3.0 параметр $\varepsilon$ (глубина спектральной ямы относительно фоновой среды) практически не влиял на вычисляемую электроотрицательность $\chi_{\text{spec}}$ и потоки зарядов в QEq-подобной модели.
+
+В режиме \texttt{v3\_eps\_coupled} вводится явная связь
+\[
+  \varepsilon_{\text{eff}} = \varepsilon_{\text{spec}} + \lambda_\varepsilon \,\varepsilon,
+\]
+и именно $\varepsilon_{\text{eff}}$ используется при вычислении знака и масштаба $\chi_{\text{spec}}$. Это приводит к трём характерным эффектам, хорошо видимым в сводном отчёте \texttt{rnd\_master\_report\_v3.txt} (секция v3.0).
+
+\paragraph{1. Закон спектральной индукции: ``глубина важнее формы''.}
+
+В версиях v1.0–v2.0 электроотрицательность элементов определялась главным образом геометрической жёсткостью порта $E_{\text{port}}$ и периодом (размером солитона). При включении v3.0 в игру вступает глубина $\varepsilon$:
+
+\begin{itemize}
+  \item элементы с более глубоким $\varepsilon$ (например, F с $\varepsilon \approx -1.5$) получают усиленную $\chi_{\text{spec}}$;
+  \item элементы с положительной $\varepsilon$ (например, Na с $\varepsilon \approx +2.0$) становятся ещё более отчётливыми донорами;
+  \item искусственный эксперимент с ``Super-O'' ($\varepsilon = -5.0$) показывает резкое увеличение потока $F_{\text{flow}}$ по сравнению с v2.0: то, что в v2 было отрицательным контролем (изменение $\varepsilon$ ничего не меняло), в v3 превращается в мощную спектральную индукцию.
+\end{itemize}
+
+Это можно сформулировать как закон:
+
+\begin{quote}
+\textbf{Закон спектральной индукции.}
+Глубина спектральной ямы $\varepsilon$ первична по отношению к геометрической форме: даже геометрически ``жёсткий'' атом (с неблагоприятной топологией и углами) при достаточно глубоком $\varepsilon$ насильно поляризует связи и создаёт химию там, где геометрия стремилась к покою.
+\end{quote}
+
+Именно этим объясняется, в частности, феномен ``свирепости'' фтора: он не только мал и жёсток, но и обладает аномально глубокой спектральной ямой.
+
+\paragraph{2. Закон ``оживления воды'': переход количества в качество.}
+
+Во v2.0 вода $\mathrm{H_2O}$ выглядела почти ``сухой'': геометрия давала жёсткий центр (O) и заметный изгиб, но разность электроотрицательностей была небольшой, а энергия потока $F_{\text{flow}}(\mathrm{H_2O})$ оставалась слабо отрицательной. На фоне этого сероводород $\mathrm{H_2S}$ казался более активной молекулой за счёт мягкого серного центра (эффект ``мягкой проводимости'').
+
+В режиме v3.0, когда $\varepsilon$ кислорода начинает существенно участвовать в формуле $\chi_{\text{spec}}$, ситуация меняется:
+
+\begin{itemize}
+  \item для $\mathrm{H_2O}$ $F_{\text{flow}}$ становится заметно более отрицательным,
+  \item индекс реактивности $R_{\text{react}} = |F_{\text{flow}}| / (F_{\text{geom}} + F_{\text{angle}})$ растёт,
+  \item кислород начинает ``отыгрывать'' у серы за счёт глубокой спектральной ямы, а не за счёт геометрии.
+\end{itemize}
+
+Это позволяет сформулировать второй закон:
+
+\begin{quote}
+\textbf{Закон оживления воды.}
+Для появления сильных полярных растворителей и ``живой'' химии связей одного геометрического фактора недостаточно; необходим критический уровень спектрального смещения $\varepsilon$, который пробивает геометрическую жёсткость и запускает устойчивый ток зарядов. Вода в этой модели возникает как тонкий баланс между глубокой $\varepsilon(\mathrm{O})$ и жёсткостью её портов.
+\end{quote}
+
+\paragraph{3. Закон разделения ролей: геометрия задаёт направление, спектр задаёт силу.}
+
+Анализ обменных реакций (например, $HF + NaCl \rightarrow HCl + NaF$) в режимах v2.0 и v3.0 показывает устойчивую картину:
+
+\begin{itemize}
+  \item знак $\Delta F$ (выгодность или невыгодность реакции) уже определяется на уровне v2.0 геометрией и периодическим размягчением: какие пары (донор–акцептор) вообще возможны и в какую сторону идёт заряд;
+  \item включение v3.0 практически не меняет знаки $\Delta F$, но может сильно изменять модуль $|\Delta F|$ — реакция остаётся в ту же сторону, но её ``энергичность'' меняется.
+\end{itemize}
+
+Тем самым, v3.0 подчёркивает разделение:
+
+\begin{quote}
+\textbf{Закон сохранения реакционного потенциала.}
+Геометрия (топология атомного графа, число портов, период) задаёт направление химического процесса (знак $\Delta F$), а спектральная глубина $\varepsilon$ задаёт его интенсивность (величину $|\Delta F|$): геометрия — это карта дорог, спектр — это топливо.
+\end{quote}
+
+Вместе три режима дают целостную картину:
+
+\begin{itemize}
+  \item v1.0: мир ``спектральных близнецов'', где группы (Li~Na, F~Cl) ещё не разделены;
+  \item v2.0: периодическое размягчение, асимметрия доноров и акцепторов, появление реалистичной химии F $\neq$ Cl и $\Delta F \neq 0$;
+  \item v3.0: включение параметра $\varepsilon$ в формулу $\chi_{\text{spec}}$, рождение сильных окислителей и корректная поляризация воды.
+\end{itemize}
+
+Этот слой v3.0 не отменяет v2.0, а добавляет ещё одну физическую ручку к спектральному функционалу: геометрия задаёт форму атома и его место в Периодической таблице, периодическое размягчение — устойчивость ролей при увеличении размера, а глубина $\varepsilon$ — интенсивность и характер электронных потоков в связях.
+
 \subsection{Антирелятивистский постулат}
 \label{subsec:postulate-anti-rel}
 
