Implement v4.0 full model, add Four Laws to book, and save R&D reports

--- a/name3.tex
+++ b/name3.tex
@@ -5755,4 +5755,119 @@ V2_PERIOD_EXPONENT = 0.7
 
 Параметр $k$ подбирается по критерию согласия знака $\Delta F$ с известной химией обменных реакций галогенидов щелочных металлов.
 
+\subsection{Четыре закона спектральной среды}
+
+На основе численных экспериментов в режимах v1.0–v4.0 (см. спектральный R\&D-отчёт) удаётся сформулировать четыре устойчивых ``закона'' поведения спектральной среды. Они не вводятся вручную, а возникают как эмерджентное следствие выбранных постулатов и калибровок модели.
+
+\subsubsection{Закон геометрического периода (спектральная энтропия)}
+
+\textbf{Формулировка.}
+При переходе к более тяжёлым периодам способность атома поддерживать спектральный вакуум (акцепторные свойства) деградирует существенно быстрее, чем способность создавать спектральное давление (донорные свойства).
+Крупные солитоны легко становятся донорами и плохо удерживают роль сильных акцепторов.
+
+\textbf{Обоснование (режим v2.0, period split).}
+В режиме v2.0 вводится геометрический закон
+\[
+E_{\text{port}} \sim \mathrm{Period}^{-k},
+\]
+где $k \approx 0.7$.
+Сканирование по $k$ (раздел \texttt{K-SCAN} отчёта) показывает, что для доноров (Li/Na) электроотрицательности $\chi_{\text{spec}}$ почти не расходятся: $\Delta\chi(\mathrm{Li}-\mathrm{Na})$ остаётся малой ($\sim 0.05{\text{–}}0.1$) во всём диапазоне $k$. Напротив, для акцепторов (F/Cl) расщепление растёт: $\Delta\chi(\mathrm{F}-\mathrm{Cl})$ увеличивается от $\approx 0.3$ до $\approx 0.6$ при росте $k$, а абсолютное значение $\chi_{\text{spec}}(\mathrm{Cl})$ падает существенно быстрее, чем у F.
+
+В режиме v2.0 же обменные реакции, завязанные на галогены (например, $\mathrm{HF} + \mathrm{NaCl} \to \mathrm{HCl} + \mathrm{NaF}$), получают ненулевое $\Delta F$ именно за счёт того, что тяжёлый галоген становится ``размягчённым'' и хуже удерживает вакуум, чем лёгкий.
+
+\textbf{Интерпретация.}
+В терминах спектральной среды это означает, что:
+
+\begin{itemize}
+  \item состояние ``избыточного давления'' (донор, металл) топологически устойчиво и слабо зависит от размера солитона;
+  \item состояние ``спектрального вакуума'' (сильный акцептор) метастабильно и требует жёсткой, компактной оболочки (малых периодов);
+  \item неметаллические, окислительные свойства локализованы в правом верхнем углу таблицы, а при росте номера периода среда неизбежно ``металлизует'' вещество.
+\end{itemize}
+
+Этот закон задаёт геометрическую тенденцию: при увеличении периода химия неметаллов естественным образом вырождается в химию металлов.
+
+\subsubsection{Закон спектрального импеданса (мягкая проводимость)}
+
+\textbf{Формулировка.}
+Энергия связи и интенсивность потоков $F_{\text{flow}}$ определяются не только разностью электроотрицательностей $\Delta\chi$, но и спектральным импедансом контакта, то есть эффективной жёсткостью канала. При прочих равных мягкий атом даёт более мощный поток, чем жёсткий.
+
+\textbf{Обоснование (режим v2.0 / v4.0, органический тест-бенч).}
+В режиме v2.0 (и в полном режиме v4.0) сравнение молекул $\mathrm{H_2O}$ и $\mathrm{H_2S}$ показывает:
+
+\begin{itemize}
+  \item геометрические части $F_{\text{geom}}$ и угловые штрафы $F_{\text{angle}}$ для $\mathrm{H_2O}$ и $\mathrm{H_2S}$ практически идентичны;
+  \item кислород имеет большую $\chi_{\text{spec}}$, чем сера, но более высокий $E_{\text{port}}$ (жёстче);
+  \item при этом модуль $F_{\text{flow}}$ для $\mathrm{H_2S}$ в 2–3 раза больше, чем для $\mathrm{H_2O}$: связь с серой даёт более сильный поток, несмотря на меньшую электроотрицательность S.
+\end{itemize}
+
+Аналогичный эффект наблюдается и для других пар мягкий/жёсткий при одинаковом топологическом мотиве.
+
+\textbf{Интерпретация.}
+В электротехнических терминах:
+
+\begin{itemize}
+  \item жёсткий акцептор (O, F) — это источник высокого ``напряжения'' $\chi$ с большим внутренним сопротивлением: он создаёт сильный потенциал, но ограничивает ток;
+  \item мягкий акцептор (S, Cl при больших периодах) — это источник среднего напряжения с малым сопротивлением: ток течёт легче, потоки $F_{\text{flow}}$ усиливаются;
+  \item энергия связи оказывается пропорциональна не только $\Delta\chi^2$, но и обратной жёсткости канала,
+  \[
+  F_{\text{flow}} \sim -\,\frac{(\Delta\chi)^2}{\text{Hardness}}.
+  \]
+\end{itemize}
+
+Для химии это значит, что ``реактивность'' атома в сеть (его способность перестраивать потоки) определяется не только тем, насколько он ``жадный'', но и тем, насколько он мягок геометрически. Сера, например, оказывается идеальным элементом для построения мягких, сильно перераспределяющих заряд цепочек (вулканизация, полисульфиды), тогда как кислород, будучи жёстким, стремится к локализованным, более ``жёстким'' структурам (водородные связи, жёсткие решётки льда).
+
+\subsubsection{Закон критической глубины (эффект Super-O)}
+
+\textbf{Формулировка.}
+Существует порог глубины спектральной ямы $\epsilon$, ниже которого геометрическая жёсткость оболочки перестаёт эффективно ограничивать поток, и среда переходит в режим ``пробоя'': резко возрастает модуль зарядовых потоков и энергия связи.
+
+\textbf{Обоснование (режим v3.0, eps-coupled).}
+В режиме v3.0 отключается периодическое размягчение, но включается явная связь $\epsilon \to \chi_{\text{spec}}$.
+Эксперимент ``Super-O'' заключается в том, что для кислорода искусственно задаётся очень глубокая $\epsilon = -5$ при малом эффективном периоде. Численно наблюдается:
+
+\begin{itemize}
+  \item базовый кислород (обычная $\epsilon$) даёт умеренную $\chi_{\text{spec}}$ и относительно малый $F_{\text{flow}}(\mathrm{H_2O})$;
+  \item ``Super-O'' с теми же геометрическими параметрами, но сильно смещённой $\epsilon$, приводит к росту $\chi_{\text{spec}}$ и резкому усилению потока: модуль $F_{\text{flow}}(\mathrm{H_2O^*})$ возрастает на порядок по сравнению с обычной водой;
+  \item при этом топология и геометрия графа молекулы вообще не меняются — меняется только глубина спектральной ямы.
+\end{itemize}
+
+В v2.0 тот же эксперимент заведомо отрицательный (контроль): при отсутствии связи $\epsilon \to \chi$ изменение $\epsilon$ не влияет ни на $\chi$, ни на $q$, ни на $F_{\text{flow}}$.
+
+\textbf{Интерпретация.}
+Этот закон разделяет два режима:
+
+\begin{itemize}
+  \item \emph{химический} — умеренные $\epsilon$, где геометрия и периодика контролируют поведение, а потоки остаются сравнимыми с $F_{\text{geom}}$;
+  \item \emph{допороговый ``ядерный''} — сверхглубокие $\epsilon$, где геометрические ограничения почти перестают работать, а потоки становятся доминирующими по энергии.
+\end{itemize}
+
+В рамках книги этот закон естественно интерпретировать как аналог перехода от химии к физике высоких энергий: при достаточной глубине спектральной ямы локальная ``микро-чёрная дыра'' в среде начинает «всасывать» энергию вне зависимости от деталей геометрии.
+
+\subsubsection{Закон разделения ролей геометрии и спектра (v1–v4)}
+
+\textbf{Формулировка.}
+Геометрия (топология и период) задаёт \emph{направление} химических процессов (знаки $\Delta F$, т.е. что вообще выгодно), а спектральная глубина $\epsilon$ задаёт \emph{силу} и ``характер'' этих процессов (модуль $|\Delta F|$, величину потоков и долю $F_{\text{flow}}$ в полной энергии).
+
+\textbf{Обоснование (эволюция v1.0–v4.0).}
+
+\begin{itemize}
+  \item В режиме v1.0 (без периода и без $\epsilon$) атомы в пределах одной группы (Li/Na, F/Cl) становятся спектральными ``близнецами'': одна и та же пара $(E_{\text{port}}, \chi_{\text{spec}})$, обменные реакции изоэнергетичны ($\Delta F \approx 0$). Модель видит только голую топологию без масштаба.
+  \item В режиме v2.0 вводится только периодическое масштабирование $E_{\text{port}} \sim \mathrm{Period}^{-k}$: близнецы расходятся, $\Delta F$ обмена становится ненулевым и получает правильный знак. Геометрия (размер солитона) уже достаточна, чтобы задать направление реакций и качественное разделение металл/неметалл.
+  \item В режиме v3.0, напротив, геометрия ``замораживается'' (v1-подобная), но включается связь $\epsilon \to \chi_{\text{spec}}$.
+  Направления реакций (знаки $\Delta F$) в значительной части остаются прежними, но модули $|\Delta F|$ и величины потоков сильно меняются, особенно в искусственных экспериментах типа Super-O.
+  \item В режиме v4.0 объединяются оба механизма: периодическое размягчение плюс спектральная подстройка по $\epsilon$. Геометрия окончательно ломает мир близнецов, а $\epsilon$ позволяет тонко настраивать характер элементов внутри группы, не меняя общей топологической картины.
+\end{itemize}
+
+\textbf{Интерпретация.}
+Этот закон фиксирует архитектуру полной модели:
+
+\begin{itemize}
+  \item v1.0 — калибровочный ноль: чистая топология без масштаба;
+  \item v2.0 — геометрический слой: период, радиус, жёсткость оболочек, закон металлизации;
+  \item v3.0 — спектральный слой: глубины $\epsilon$, характер окислителей и доноров, эффекты вроде Super-O;
+  \item v4.0 — их суперпозиция: готовый инструмент для химических предсказаний.
+\end{itemize}
+
+С точки зрения дальнейшего R\&D это означает, что поиск ``острова стабильности'' и экзотических элементов можно вести, варьируя независимо два ортогональных набора параметров: геометрические (период и топология атомного графа) и спектральные ($\epsilon$ и связанные с ней поправки к $\chi_{\text{spec}}$), проверяя, как их комбинация влияет на $F_{\text{geom}}$, $F_{\text{flow}}$ и знаки $\Delta F$ в типичных реакциях.
+
 \end{document}
