feat: Add new complexity, fdm, and grower modules, and remove debug output from master log.

--- a/name3.tex
+++ b/name3.tex
@@ -19,20 +19,6 @@
 \maketitle
 
 \tableofcontents
-
-% ==========================
-% ЧАСТЬ I. ВВЕДЕНИЕ И КОНСТИТУЦИЯ МОДЕЛИ
-% ==========================
-\section{Введение}
-
-\subsection{Зачем нужен этот документ}
-
-Этот текст не претендует на роль учебника по физике для широкой аудитории.
-Он написан как рабочая книга для узкого круга людей, которым важно:
-
-\begin{itemize}
-  \item иметь \textbf{цельную онтологию} физической реальности без
-        релятивистской геометрии и квантовой мистики;
   \item иметь \textbf{один самодостаточный документ}, в котором собраны
         все ключевые определения, постулаты и функционалы модели;
   \item иметь \textbf{прямую связку} между идеями и кодом: формулы и
@@ -311,7 +297,152 @@
   \item искусственный эксперимент с ``Super-O'' ($\varepsilon = -5.0$) показывает резкое увеличение потока $F_{\text{flow}}$ по сравнению с v2.0: то, что в v2 было отрицательным контролем (изменение $\varepsilon$ ничего не меняло), в v3 превращается в мощную спектральную индукцию.
 \end{itemize}
 
-Это можно сформулировать как закон:
+
+Это можно сформулировать как закон: \textit{спектральный поток определяется глубиной, а геометрия --- шириной канала.}
+
+\subsection{Четыре закона спектральной среды}
+
+В этом подразделе мы формулируем четыре рабочих закона спектральной среды.
+Все они основаны на численных экспериментах в коде \texttt{geom\_atoms.py}
+(режимы v1.0--v4.0) и на данных R\&D-отчётов.
+
+\paragraph{Закон 1. Ролевой периодический закон.}
+
+\textbf{Формулировка.}
+Для лёгких s/p-элементов существуют дискретные сетевые роли
+(terminator, bridge, hub, inert), которые являются устойчивыми минимумами
+функционала $F_{\text{geom}} + F_{\text{spec}}$ при заданном числе портов.
+Эти роли периодически повторяются при переходе к следующему периоду
+(после корректного периодического масштабирования энергии порта).
+
+\textbf{Обоснование (v4).}
+В модели каждый элемент представлен графом-атомом \texttt{AtomGraph}
+с полями \texttt{ports}, \texttt{port\_geometry}, \texttt{role}.
+В отчёте v4.0 таблица элементных индексов показывает, что роли
+\emph{terminator / bridge / hub / inert} повторяются для H--Ne и Na--Ar
+при том же числе портов и похожей топологии графа.
+При этом различаются только численные значения $E_{\text{port}}$ и
+$\chi_{\text{spec}}$, зависящие от периода и спектра.
+
+\textbf{Интерпретация.}
+Это геометрический аналог традиционного деления на s-блок и p-блок.
+Вместо орбиталей мы оперируем устойчивыми сетевыми ролями:
+одно-портовые терминаторы (H, F, Cl, Li, Na),
+двухпортовые мосты (Be, Mg, O, S), много-портовые хабы (B, C, N, P, Si).
+Периодический закон здесь формулируется как повторение набора ролей
+при увеличении периода.
+
+\bigskip
+
+\paragraph{Закон 2. Спектральный закон электроотрицательности.}
+
+\textbf{Формулировка.}
+Электроотрицательность $\chi_{\text{spec}}(Z)$ является
+геометрическо-спектральным функционалом
+\[
+  \chi_{\text{spec}}(Z)
+  =
+  \mathrm{sign}(\epsilon_Z - \mu_{\text{env}})\;
+  \alpha\,
+  \frac{F_{\text{geom}}(Z)}{\mathrm{ports}(Z)}\,
+  \mathrm{period}(Z)^{-k}
+  + \text{(донорные/центровые демпферы)},
+\]
+так что:
+\begin{itemize}
+  \item внутри периода (по строке таблицы) $\chi_{\text{spec}}$ примерно
+        монотонно растёт по мере увеличения $F_{\text{geom}}/\mathrm{ports}$
+        при фиксированном знаке (донор/акцептор),
+  \item между периодами (по столбцу) $\chi_{\text{spec}}$ масштабируется
+        как $\mathrm{period}^{-k_{\text{period}}}$ с $k_{\text{period}}\approx 0{,}7$.
+\end{itemize}
+
+\textbf{Обоснование (v2/v4).}
+В режимах v2.0 и v4.0 энергия порта $E_{\text{port}}$ масштабируется как
+$\mathrm{period}^{-k}$, а $\chi_{\text{spec}}$ вычисляется
+на основе $E_{\text{port}}$ и положения уровня $\epsilon_Z$ относительно
+химического потенциала среды $\mu_{\text{env}}$.
+Калибровка на H, Li--Cl показывает:
+\begin{itemize}
+  \item по периоду Li $\to$ F и Na $\to$ Cl величина $|\chi_{\text{spec}}|$
+        возрастает монотонно и качественно воспроизводит порядок
+        шкалы Полинга;
+  \item вертикальные переходы Li $\to$ Na и F $\to$ Cl при фиксированном $k$
+        дают систематическое ослабление $|\chi_{\text{spec}}|$, как в реальной химии.
+\end{itemize}
+
+\textbf{Интерпретация.}
+Вместо эмпирической электроотрицательности мы получаем вычислимую функцию
+$\chi_{\text{spec}}(Z)$ от геометрии графа-атома, числа портов,
+периодического масштаба и спектральной глубины $\epsilon_Z$.
+Периодический закон формулируется как закон поведения этой функции:
+монотонность в периоде и степенное ослабление между периодами.
+
+\bigskip
+
+\paragraph{Закон 3. Закон близнецов и изовалентной замены.}
+
+\textbf{Формулировка.}
+Для каждой сетевой роли (terminator, bridge, hub) существуют
+спектрально-геометрические ``близнецы'' в соседних периодах, такие что:
+\begin{itemize}
+  \item в режиме без периодического масштабирования (v1.0)
+        их $\chi_{\text{spec}}$ и вклад в $\Delta F$ реакций практически совпадают;
+  \item включение масштабирования $\mathrm{period}^{-k}$ (v2.0/v4.0)
+        порождает наблюдаемую химию: различия в реакционной способности
+        близнецов и смещение баланса в обменных реакциях.
+\end{itemize}
+
+\textbf{Обоснование (v1/v2/v4).}
+В режиме v1.0 элементы Li и Na, Be и Mg, F и Cl имеют одинаковые
+$E_{\text{port}}$ и почти одинаковые $\chi_{\text{spec}}$; обменные реакции
+(HF/NaCl, LiF/HCl) оказываются почти изоэнергетичными ($\Delta F \approx 0$).
+В режимах v2.0 и v4.0 периодический фактор ломает эту симметрию:
+$E_{\text{port}}$ и $\chi_{\text{spec}}$ для тяжёлых близнецов становятся меньше
+по модулю, а $\Delta F$ реакций приобретает конечное значение, согласующееся
+с известной химией.
+
+\textbf{Интерпретация.}
+Это даёт формальный критерий изовалентной (изохимической) замены элементов:
+два элемента считаются близнецами, если их $(\chi_{\text{spec}}, F_{\text{total}})$
+в v1.0 совпадают, а в v4.0 различаются только за счёт периодического масштаба.
+На уровне молекул это даёт строгий язык для описания ``замены O на S'',
+``замены F на Cl'' и т.п.
+
+\bigskip}
+
+\paragraph{Закон 4. Общая спектральная структура для химии и гравитации.}
+
+\textbf{Формулировка.}
+Химические свойства (электроотрицательность $\chi$, валентность, сетевые роли)
+и гравитационные свойства (масса, гравитационный потенциал) являются
+двумя разными макропределами одной и той же спектральной структуры
+$\rho_{\text{spec}}$, но для разных операторов и разных масштабов.
+
+\textbf{Обоснование (спектральная физика).}
+В непрерывной спектральной физике вводится локальная спектральная плотность
+$\rho_{\text{spec}}(\lambda, x)$, её усреднение $\rho_{\text{spec}}(x)$ и
+спектральный потенциал
+$\varphi(x) = -\ln \rho_{\text{spec}}(x)$.
+Гравитационный отклик задаётся оператором
+$a_{\text{grav}}(x) = -\Delta \ln \rho_{\text{spec}}(x)$.
+В дискретной геометрической таблице атомов мы переносим ту же логику на графы:
+LDOS графа играет роль дискретной $\rho_{\text{spec}}$, функционалы
+$F_{\text{spec}}$ и $F_{\text{geom}}$ описывают устойчивые режимы локализованного
+солитона и его роли (hub/bridge/terminator).
+
+\textbf{Интерпретация.}
+Химия и гравитация в этой картине оказываются не двумя несвязанными теориями,
+а разными проявлениями одной спектральной среды:
+\begin{itemize}
+  \item на малых масштабах (атомы, молекулы) спектральная структура задаёт
+        валентность, электроотрицательность и формы связей;
+  \item на космических масштабах она же, через оператор Лапласа по $\ln \rho$,
+        определяет гравитационные поля и формы крупных структур.
+\end{itemize}
+Геометрическая таблица атомов — это ``микроскопический'' предел той же самой
+спектральной физики, которая описывает гравитацию.
+
 
 \begin{quote}
 \textbf{Закон спектральной индукции.}
@@ -4320,6 +4451,39 @@ $\hat H[\theta]$ и вычисление спектральных характе
 
 Для практической работы с моделью и совместной разработки кода
 целесообразно придерживаться следующей структуры.
+
+
+\subsection{Численный движок: FDM, топологическая сложность и рост деревьев}
+
+В этом разделе мы фиксируем три вычислительных "кирпича", на которых строится
+спектральная геометрия атомов и молекул.
+
+\paragraph{Fractal Decomposition Method (FDM).}
+Это численный метод интегрирования сильно неоднородных спектральных плотностей
+в многомерных пространствах. Вместо равномерной сетки мы используем фрактальное
+разбиение области (итерационные функции и фрактальную декомпозицию),
+которое даёт быструю сходимость для солитоноподобных "ям" $\rho_{\text{spec}}(x)$.
+В коде это реализуется модулем \texttt{fdm.py} и используется для оценки
+энергетических интегралов по 3D-ядру атома.
+
+\paragraph{Топологическая сложность и число пересечений.}
+Сложность графа-атома можно выражать не только через числа узлов и рёбер,
+но и через число пересечений при вложении в плоскость или пространство.
+Работы по связи crossing number с инвариантами Громова--Виттена позволяют
+заменить комбинаторный перебор на геометрический функционал.
+В книге мы обозначаем эту часть как $F_{\text{complex}}$ и выносим её
+в отдельный модуль \texttt{complexity.py}.
+
+\paragraph{Теорема рождественской ёлки.}
+Рост молекул и кристаллов в Среде можно описывать как вероятностный рост дерева
+с затухающими ветвлениями. "Ёлочная" теорема формализует баланс между ветвлением
+и затуханием. В нашем коде этому соответствует модуль \texttt{grower.py},
+который будет использоваться для генерации сложных молекулярных графов
+как альтернативу ручной сборке структур.
+
+Всё это вместе образует "численный движок" геометрической таблицы атомов:
+FDM считает интегралы по Среде, $F_{\text{complex}}$ измеряет топологическую
+сложность ядер, а генератор деревьев описывает рост молекул и кристаллов.
 
 \subsection*{Структура репозитория}
 
